--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.3.3
-before_install: gem install bundler -v 1.12.5
+  - 2.4.0
+
+cache:
+  bundler: true
+
+before_install:
+  - gem install bundler -v 1.14.6
+
+script:
+  - bin/rubocop
+
+notifications:
+  email: false
