REPLACE 'minitest' by 'rspec'

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,9 @@ rvm:
 cache:
   bundler: true
 
-before_install:
-  - gem install bundler -v 1.14.6
-
 script:
-  - bundle exec rake test
-  - bin/rubocop
+  - bundle exec bin/rspec
+  - bundle exec bin/rubocop
 
 notifications:
   email: false
